# hnix-store-experiments

./: README.md  cabal.project  hnix-store-experiments.cabal
app/: BuildDerivation.hs  InCache.hs
src/: ENix.hs
src/ENix/: Cached.hs
test/: ParseSpec.hs
