name:                hnix-store-experiments
version:             0.1.0.0
synopsis:            Not much
-- description:         Something a bit longer
homepage:            https://github.com/sorki/hnix-store-experiments
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     ENix
                     , ENix.Cached
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , byteunits
                     , text
                     , http-client
                     , http-client-tls
                     , http-types
                     , hnix-store-core
                     , nix-narinfo

  default-language:    Haskell2010

executable hnix-store-in-cache
  hs-source-dirs:      app
  main-is:             InCache.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hnix-store-experiments
                     , bytestring
                     , http-client
                     , http-client-tls
                     , http-types
                     , hnix-store-core
  default-language:    Haskell2010


--test-suite hnix-store-experiments-tests
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  other-modules:       --ParseSpec
--                       SpecHelper
--  build-depends:       base >= 4.7 && < 5
--                     , hnix-store-experiments
--                     , hspec
--                     , base16-bytestring
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/hnix-store-experiments
